# GabTag

./: .coverage  .coveragerc  .gitignore  .mypy.ini  .travis.yml  Makefile  README.md  com.github.lachhebo.Gabtag.Devel.json  com.github.lachhebo.Gabtag.json  com.lachhebo.Gabtag.json  deploy.sh  manifest.json  meson.build  meson_options.txt  org.gnome.Gabtag.json  requirements.txt
.github/workflows/: flathub-publish.yml  flatpak.yml  gabtag-testing.yml
.tx/: config
build-aux/meson/: postinstall.py
data/: com.github.lachhebo.Gabtag.appdata.xml.in  com.github.lachhebo.Gabtag.desktop.in  com.github.lachhebo.Gabtag.gschema.xml  com.lachhebo.Gabtag.appdata.xml.in  com.lachhebo.Gabtag.desktop.in  com.lachhebo.Gabtag.gschema.xml  meson.build  org.gnome.Gabtag.appdata.xml.in  org.gnome.Gabtag.desktop.in  org.gnome.Gabtag.gschema.xml
data/icons/: meson.build
po/: LINGUAS  POTFILES  es.po  es_MX.po  fr.po  fr_FR.po  gabtag.pot  it.po  it_IT.po  meson.build  pt_BR.po  sv.po  sv_SE.po  tr.po
src/: #window.ui#  Crawler_dir.py  Crawler_modif.py  MP3Handler.py  __init__.py  about_dialog.ui  about_dialog_gtk.py  audio_extension_handler.py  audio_getter.py  audio_mp3_file_handler.py  audio_ogg_file_handler.py  audiobasics.py  constant.py  controller.py  crawler_data.py  crawler_directory.py  crawler_modification.py  data_crawler.py  data_scrapper.py  dir_manager.py  event_machine.py  exception.py  extension_manager.py  gabtag.gresource.xml  gabtag.in  gi_composites.py  logger.py  main.py  meson.build  model.py  moteur.py  selection_handler.py  tools.py  treeview.py  version.py  view.py  window.py  window.ui  window_gtk.py
tests/: test_MP3Handler.py  test_audio_mp3_file_handler.py  test_audio_ogg_file_handler.py  test_controller.py  test_crawler_data.py  test_event_machine.py  test_model.py  test_moteur.py  test_tools.py  test_view.py
tests/music_manager/: test_audio_extension_handler.py  test_audio_getter.py
